Update RMI examples